plugins {
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '5.+'
}

version = "${version}"
group = 'com.mrbysco.telepastries' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
archivesBaseName = "TelePastries-${mc_version}"

java.toolchain.languageVersion = JavaLanguageVersion.of(17) // Mojang ships Java 8 to end users, so your mod should target Java 8.

println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
minecraft {
    mappings channel: "${mcp_channel}", version: "${mcp_mappings}"
//    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
    runs {
        client {
            workingDirectory project.file('run')

            // property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
            property 'forge.logging.console.level', 'debug'

            mods {
                telepastries {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')

            // property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
            property 'forge.logging.console.level', 'debug'

            mods {
                telepastries {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')

            // property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
            property 'forge.logging.console.level', 'debug'

            args '--mod', 'telepastries', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')

            mods {
                telepastries {
                    source sourceSets.main
                }
            }
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    maven {
        // location of the maven that hosts jei files
        name = "Progwml6 maven"
        url = "https://dvs1.progwml6.com/files/maven"
    }
    maven {
        url = 'https://www.cursemaven.com'
        content {
            includeGroup "curse.maven"
        }
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:${mc_version}-${forge_version}"

//    compileOnly fg.deobf("mezz.jei:jei-${mc_version}-common-api:${jei_version}")
//    compileOnly fg.deobf("mezz.jei:jei-${mc_version}-forge-api:${jei_version}")

//    runtimeOnly fg.deobf("mezz.jei:jei-${mc_version}-forge:${jei_version}")

    implementation fg.deobf("curse.maven:jade-324717:4199865") //Jade (WAILA)
    implementation fg.deobf("curse.maven:TheOneProbe-245211:4159743")

//    runtimeOnly fg.deobf("curse.maven:placebo-283644:3437009")

    //runtimeOnly fg.deobf("curse.maven:LostCities-269024:3711555")
    //deobfCompile 'bookshelf:Bookshelf:1.12.2:2.3.577'
    //deobfCompile 'hunting-dimension:HuntingDimension:1.12.2:1.0.36'
    //deobfCompile 'bnbgaminglib:BNBGamingLib:1.12.2:2.17.6'
    //deobfCompile 'topography:Topography:1.12.2:1.5.1'
    //deobfCompile 'compact-machines:compactmachines3-1.12.2:3.0.17:b267'
    //runtimeOnly fg.deobf("curse.maven:CompactMachines-224218:3695916")
}

jar {
    manifest {
        attributes([
                "Specification-Title"     : "telepastries",
                "Specification-Vendor"    : "Mrbysco",
                "Specification-Version"   : "1", // We are version 1 of ourselves
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : "${version}",
                "Implementation-Vendor"   : "Mrbysco",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

def reobfFile = file("$buildDir/reobfJar/output.jar")
def reobfArtifact = artifacts.add('default', reobfFile) {
    type 'jar'
    builtBy 'reobfJar'
}
publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact(reobfArtifact) {
                builtBy reobfArtifact
                artifactId = archivesBaseName
                classifier null
            }
        }
    }
    repositories {
        if (System.getenv().SAP_SECRET) {
            maven {
                url "https://maven.saps.dev/releases"
                credentials {
                    username = "mrbysco"
                    password = "${System.getenv().SAP_SECRET}"
                }
            }
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}